# rust-advent-of-code

./: .gitignore  README.md  justfile
2024/: Cargo.toml  justfile
2024/day-01/src/: part1.rs  part2.rs
2024/day-02/src/: lib.rs  part1.rs  part1_nofold.rs  part2.rs
2024/day-03/src/: part1.rs
2024/day-09/src/: part1.rs
2024/day-10/src/: part1.rs  part2.rs
2024/day-11/src/: part1.rs  part2.rs
2024/day-13/src/: part1.rs  part2.rs
2024/day-14/src/: part1.rs  part2.rs
2024/old/: README.md  day1.rs  day2.rs  day3.rs  day3_test.txt  day4.rs  day4.txt  day4_test.txt  day5.rs  day5_test.txt  day6.rs  main.rs
2025/: Cargo.toml
2025/day-01/src/: part1.rs  part2.rs
2025/day-02/: Cargo.toml
2025/day-02/src/: part1.rs  part2.rs
2025/day-03/src/: part1.rs  part2.rs
2025/day-04/src/: part1.rs  part2.rs
2025/day-05/src/: part1.rs  part2.rs
2025/day-08/src/: part1.rs  part2.rs
src/: day1.rs  day1_test.txt  day2.rs  day2_test.txt  day3.rs  main.rs
