[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]


[workspace.dependencies]
nom = "7.1.3"
itertools = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
miette = { version = "7.4", features = ["fancy"] }
divan = "0.1.7"
rstest = "0.23.0"
test-log = { version = "0.2.13", default-features = false, features = [
    "trace",
] }
